--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ a { color:#00b2e8; text-decoration:underline;}
 .content_resize, .fbg_resize, .footer_resize { margin:0 auto; padding:0 40px; width:890px;}
 
 /* header */
-.header { background:url(images/header_bg.jpg) repeat-x center top;}
+.header { background:url(header_bg.jpg) repeat-x center top;}
 .header_resize { margin:0 auto; padding:0; width:970px; height:287px;}
 .header .logo { padding:51px 0 0 318px; float:left; width:auto;}
 
@@ -28,7 +28,7 @@ img/* menu */
 .menu_nav ul { list-style:none; padding-top:14px;}
 .menu_nav ul li { margin:0 4px; float:left;}
 .menu_nav ul li a { display:block; margin:0; padding:20px 24px; color:#fff; text-decoration:none;}
-.menu_nav ul li.active a, .menu_nav ul li a:hover { color:#00b2e8; background:url(images/menu_a.gif) no-repeat center top;}
+.menu_nav ul li.active a, .menu_nav ul li a:hover { color:#00b2e8; background:url(menu_a.gif) no-repeat center top;}
 
 /* content */
 .content_resize { padding-right:0; padding-top:16px; width:930px;}
@@ -38,11 +38,11 @@ img/* menu */
 .content .mainbar .article, .content .sidebar .gadget { margin:0; padding:0 0 16px 0;}
 .content .sidebar { float:right; width:276px;}
 ul.sb_menu, ul.ex_menu { margin:0; padding:0; list-style:none; color:#959595;}
-ul.sb_menu li, ul.ex_menu li { margin:0; background:url(images/li.gif) no-repeat 0 12px;}
+ul.sb_menu li, ul.ex_menu li { margin:0; background:url(li.gif) no-repeat 0 12px;}
 ul.sb_menu li { padding:4px 0; border-bottom:1px solid #e3e3e3; width:220px;}
 ul.ex_menu li { padding:4px 0 8px;}
 ul.sb_menu li a, ul.ex_menu li a { color:#5f5f5f; text-decoration:none; margin-left:-16px; padding-left:16px;}
-ul.sb_menu li a:hover, ul.ex_menu li a:hover { color:#00b2e8; background:url(images/li_a.gif) no-repeat left center;}
+ul.sb_menu li a:hover, ul.ex_menu li a:hover { color:#00b2e8; background:url(li_a.gif) no-repeat left center;}
 ul.sb_menu li a:hover { text-decoration:underline;}
 ul.ex_menu li a:hover { text-decoration:none;}
 
