--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Released for free under a Creative Commons Attribution 3.0 License
 */
 
 @charset "utf-8";
-body { margin:0; padding:0; color:#5f5f5f; font:normal 18px/1.8em Arial, Helvetica, sans-serif;}
+body { margin:0; padding:0; width:100%; color:#5f5f5f; font:normal 18px/1.8em Arial, Helvetica, sans-serif;}
 html, .main { padding:0; margin:0; background-color:#fff;}
 .clr { clear:both; padding:0; margin:0; width:100%; font-size:0px; line-height:0px;}
 h1 { margin:0; padding:32px 0 0; color:#fff; font:normal 50px/1.2em Arial, Helvetica, sans-serif; text-transform:uppercase; text-align:center;}
